--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link href="CSS/css.css" rel="stylesheet">
+    <script src="script.js" defer></script>
     <title>Project ANI</title>
 </head>
 <body>
@@ -47,8 +48,7 @@
                     </div>
                     <div class="weather">
                         <h2 class="city">Weather in Baguio City</h2>
-                        <h1 class="temp">Temperature:</h1>
-                        <h1 class="temp1">51°</h1>
+                        <h1 class="temp1">16.93°C</h1>
                         <div class="flex">
                             <img src="" alt="" class="icon" />
                             <div class="description">Cloudy</div>
