--- a/Index.html
+++ b/Index.html
@@ -81,63 +81,24 @@
             <div class="HighlandCrops">
                 <h2>Highland Crops</h2>
 
+
                 <div class='VegsMenu'>
                     <ul id="VegsList">
-                        <li>
-                            <a href="#">
-                                <span class="Vlist">Cabbage</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="Vlist">Potato</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="Vlist">Carrot</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="Vlist">Chinese Cabbage</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="Vlist">Sweat Peas</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="Vlist">Lettuce</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="Vlist">Bell Pepper</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="Vlist">Broccoli</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="Vlist">Cauli Flower</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="Vlist">Tomato</span>
-                            </a>
-                        </li>
+                        <li><a href="#VegsList"><span class="Vlist">Cabbage</span></a></li>
+                        <li><a href="#VegsList"><span class="Vlist">Potato</span></a></li>
+                        <li><a href="#VegsList"><span class="Vlist">Carrot</span></a></li>
+                        <li><a href="#VegsList"><span class="Vlist">Chinese Cabbage</span></a></li>
+                        <li><a href="#VegsList"><span class="Vlist">Sweat Peas</span></a></li>
+                        <li><a href="#VegsList"><span class="Vlist">Lettuce</span></a></li>
+                        <li><a href="#VegsList"><span class="Vlist">Bell Pepper</span></a></li>
+                        <li><a href="#VegsList"><span class="Vlist">Broccoli</span></a></li>
+                        <li><a href="#VegsList"><span class="Vlist">Cauli Flower</span></a></li>
+                        <li><a href="#VegsList"><span class="Vlist">Tomato</span></a></li>
                     </ul>
                 </div>
             </div>
 
-            <div id="VegtableInfo">
+            <div class="VegtableInfo">
 
             </div>
 
