--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link href="CSS/css.css" rel="stylesheet">
-    <script src="script.js" defer></script>
+    <script src="JS/script.js" defer></script>
     <title>Project ANI</title>
 </head>
 <body>
