--- a/Index.html
+++ b/Index.html
@@ -41,6 +41,7 @@
     <div class="Contents">
         <div class="HomeContents">
             <div class="WeatherSection">
+                <img src="Images/Sample2.png" alt="">
                 <div class="card">
                     <div class="search">
                         <input type="text" class="search-bar" placeholder="Search">
