--- a/Index.html
+++ b/Index.html
@@ -65,16 +65,6 @@
                 <h2>Chart</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
             </div>
-
-            <div class="AreaOfFarmland">
-                <h2>Area Of Farmland</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
-            </div>
-
-            <div class="Announcements">
-                <h2>Announcements</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
-            </div>
         </div>
 
 
@@ -125,8 +115,22 @@
 
             <div id="MonthsInfoID" class="MonthInfo"></div>
         </div>
-
+        <div class="Municipalities">
+            <h2>Municipalities</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
         </div>
+
+        <div class="GIS">
+            <h2>GIS</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
+        </div>
+
+        <div class="Datasets">
+            <h2>Datasets</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
+        </div>
+
+    </div>
     </div>
 </body>
 </html>
