--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
 
     <div class="Banner" id="HomeID">
         <h2>PROJECT ANI</h2>
-        <p>Agri Natin Ito : A Decision Support System to Predict Crop Trends in Benguet using Data Mining and Machine Learning</p>
+        <p>Agri Natin Ito : A Decision Support System for Benguet's Crop Prediction</p>
     </div>
 
     <div class="Contents">
