--- a/Index.html
+++ b/Index.html
@@ -18,8 +18,8 @@
     <title>Project ANI</title>
 <style>
     .item1 { grid-area: title; }
-    .item2 { grid-area: chart; }
-    .item3 { grid-area: description; }
+    .item2 { grid-area: description; }
+    .item3 { grid-area: chart; }
 
 </style>
 </head>
@@ -74,8 +74,8 @@
 
             <div class="Chart">
                 <div class="grid-container">
-                    <div class="item1"><h2>Summary of Ration(Crops)</h2></div>
-                    <div class="item2">description</div>  
+                    <div class="item1"><h2>Ratio of Crops(Crops)</h2></div>
+                    <div class="item2">Description</div>  
                     <div class="item3">
                         <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
 
