--- a/Index.html
+++ b/Index.html
@@ -75,7 +75,7 @@
             <div class="Chart">
                 <div class="grid-container">
                     <div class="item1"><h2>Ratio of Crops(Crops)</h2></div>
-                    <div class="item2">Description</div>  
+                    <div class="item2"></div>  
                     <div class="item3">
                         <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
 
@@ -130,7 +130,7 @@
                         <li><a href="#VegsList"><span class="Vlist">Cauli Flower</span></a></li>
                         <li><a href="#VegsList"><span class="Vlist">Tomato</span></a></li>
                     </ul>
-                </div>
+                </div>  
             </div>
 
             <div id="VegtableInfoID" class="VegtableInfo"></div>
