--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,10 @@
     .item1 { grid-area: title; }
     .item2 { grid-area: description; }
     .item3 { grid-area: chart; }
-
+     #map{
+         height: 500px;
+         width: 100%;
+     }
 </style>
 </head>
 <body>
@@ -162,7 +165,9 @@
         </div>
         <div class="Municipalities">
             <h2>Municipalities</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
+            <div class="map-wrapper">
+            <iframe class="googlemap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12874.095960023275!2d120.58756668150106!3d16.399839369352506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3391a16879def13f%3A0x8edef534be3a75c0!2sBaguio%2C%20Benguet!5e0!3m2!1sen!2sph!4v1623908317700!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
         </div>
 
         <div class="GIS">
