--- a/Index.html
+++ b/Index.html
@@ -84,14 +84,19 @@
                         <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
 
                         <script>
-                        var xValues = ["Potato", "Chinese Cabbage", "Cabbage", "Lettuce", "Carrots"];
-                        var yValues = [55, 49, 44, 24, 15];
+                        var xValues = ["Cabbage", "Chinese Cabbage", "Lettuce", "Cauliflower", "Snap beans", 
+                        "Garden peas", "Sweet Pepper", "White Potato", "Carrots"];
+                        var yValues = [20,10,10,10,10,10,10,10,10];
                         var barColors = [
                           "#b91d47",
                           "#00aba9",
                           "#2b5797",
                           "#e8c3b9",
-                          "#1e7145"
+                          "#1e7145", 
+                          "#ff80df",
+                          "#6699ff",
+                          "#ffff4d",
+                          "#00ff00"
                         ];
                         
                         new Chart("myChart", {
@@ -124,15 +129,14 @@
                 <div class='VegsMenu'>
                     <ul id="VegsList">
                         <li><a href="#CropsID"><span class="Vlist">Cabbage</span></a></li>
-                        <li><a href="#CropsID"><span class="Vlist">Potato</span></a></li>
-                        <li><a href="#CropsID"><span class="Vlist">Carrot</span></a></li>
                         <li><a href="#CropsID"><span class="Vlist">Chinese Cabbage</span></a></li>
-                        <li><a href="#CropsID"><span class="Vlist">Sweat Peas</span></a></li>
                         <li><a href="#CropsID"><span class="Vlist">Lettuce</span></a></li>
-                        <li><a href="#CropsID"><span class="Vlist">Bell Pepper</span></a></li>
-                        <li><a href="#CropsID"><span class="Vlist">Broccoli</span></a></li>
-                        <li><a href="#CropsID"><span class="Vlist">Cauli Flower</span></a></li>
-                        <li><a href="#CropsID"><span class="Vlist">Tomato</span></a></li>
+                        <li><a href="#CropsID"><span class="Vlist">Cauliflower</span></a></li>
+                        <li><a href="#CropsID"><span class="Vlist">Snap Beans</span></a></li>
+                        <li><a href="#CropsID"><span class="Vlist">Garden Peas</span></a></li>
+                        <li><a href="#CropsID"><span class="Vlist">Sweet Pepper</span></a></li>
+                        <li><a href="#CropsID"><span class="Vlist">White Potato</span></a></li>
+                        <li><a href="#CropsID"><span class="Vlist">Carrots</span></a></li>
                     </ul>
                 </div>  
             </div>
