--- a/Index.html
+++ b/Index.html
@@ -184,6 +184,20 @@
         <div class="Datasets">
             <h2>Datasets</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero aliquid iste repudiandae non repellendus, tempora modi nulla praesentium eos debitis, minus optio nobis vel impedit hic! Pariatur aliquam sequi voluptas.</p>
+            <div class="search">
+                <input type="text" class="search-bar" placeholder="Enter Municipality: ">
+                <input type="text" class="search-bar" placeholder="Enter Crop: ">
+                <input type="text" class="search-bar" placeholder="Enter Year: ">
+                <input type="text" class="search-bar" placeholder="Enter Yearly rain: ">
+                <input type="text" class="search-bar" placeholder="Enter Area: ">
+            </div>
+                <button onclick="myFunction()">Search</button>
+                <p id="demo"></p>
+                <script>
+                function myFunction() {
+                 document.getElementById("demo").innerHTML = "Sample Data: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra tellus in hac habitasse. Sit amet cursus sit amet dictum. Sapien pellentesque habitant morbi tristique. Faucibus et molestie ac feugiat sed lectus vestibulum mattis ullamcorper. Amet purus gravida quis blandit turpis cursus in. Feugiat scelerisque varius morbi enim. Feugiat vivamus at augue eget arcu dictum varius duis. Enim diam vulputate ut pharetra sit amet aliquam id diam. Quam id leo in vitae turpis massa sed. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Enim nunc faucibus a pellentesque sit. Amet aliquam id diam maecenas ultricies mi eget. Velit euismod in pellentesque massa. Dictum non consectetur a erat nam at lectus. Massa eget egestas purus viverra accumsan in nisl nisi scelerisque. Ut enim blandit volutpat maecenas volutpat blandit aliquam. Velit egestas dui id ornare arcu odio ut. Ornare arcu odio ut sem nulla.";
+                }
+                </script>
         </div>
 
     </div>
