--- a/Index.html
+++ b/Index.html
@@ -27,13 +27,13 @@
 </head>
 <body>
     <nav class="navbar">
-    <div class="brand-title">Project ANI</div>
-    <a href="" class="toggle-button">
+     <div class="brand-title">Project ANI</div>
+     <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
-    </a>
-    <div class="navbar-links">
+     </a>
+     <div class="navbar-links">
         <ul>
             <li><a href="#HomeID" class="MMlist">Home</a></li>
             <li><a href="#CropsID" class="MMlist">Crops</a></li>
@@ -42,7 +42,7 @@
             <li><a href="#" class="MMlist">GIS</a></li>
             <li><a href="#" class="MMlist">Datasets</a></li>
         </ul>
-    </div>
+     </div>
     </nav>
 
     <div class="Banner" id="HomeID">
