--- a/Index.html
+++ b/Index.html
@@ -161,8 +161,9 @@
                     </ul>
                 </div>  
             </div>
-
-            <div id="VegtableInfoID" class="VegtableInfo"></div>
+            <div class="OuterBox">
+                <div id="VegtableInfoID" class="VegtableInfo"></div>
+            </div>
         </div>
 
         <div class="SeasonsContent" id="SeasonsID">
