--- a/Index.html
+++ b/Index.html
@@ -75,8 +75,11 @@
     </nav>
 
     <div class="Banner" id="HomeID">
-        <h2>PROJECT ANI</h2>
+        <div class="Banner1">
+        <h2>Project ANI</h2>
         <p>Agri Natin Ito : A Decision Support System for Benguet's Crop Prediction</p>
+        </div>
+        <img src="Images/Farmer.png"> 
     </div>
 
     <div class="Contents">
