--- a/Index.html
+++ b/Index.html
@@ -75,11 +75,11 @@
     </nav>
 
     <div class="Banner" id="HomeID">
-        <video src="Images/Forest.mp4" muted loop autoplay></video>
         <div class="Banner1">
         <h2>Project ANI</h2>
         <p>Agri Natin Ito : A Decision Support System for Benguet's Crop Prediction</p>
         </div>
+        <img src="Images/Farmer.png"> 
     </div>
 
     <div class="Contents">
@@ -87,7 +87,6 @@
             <!--Weather Widget-->
             <div class="WeatherSection">
                 <div class="card">
-                <div class="inside">
                     <div class="search">
                         <input type="text" class="search-bar" placeholder="Search">
                         <button>
@@ -104,10 +103,6 @@
                         <div class="humidity">Humidity: 60%</div>
                         <div class="wind">Wind Speed: 6.2 km/h</div>
                     </div>
-                </div>
-                </div>
-                <div class="right">
-                <img src="Images/Man.png" width="600px" height="400px">
                 </div>
             </div>
 
