--- a/Index.html
+++ b/Index.html
@@ -87,6 +87,7 @@
             <!--Weather Widget-->
             <div class="WeatherSection">
                 <div class="card">
+                <div class="inside">
                     <div class="search">
                         <input type="text" class="search-bar" placeholder="Search">
                         <button>
@@ -95,14 +96,18 @@
                     </div>
                     <div class="weather">
                         <h2 class="city">Weather in Baguio City</h2>
-                        <h1 class="temp">Temperature:</h1>
+                        <h1 class="temp" style="color:orange">Temperature:</h1>
                         <div class="flex">
                             <img src="" alt="" class="icon" />
-                            <div class="description">Cloudy</div>
+                            <div class="description" style="color:lightblue;">Cloudy</div>
                         </div>
                         <div class="humidity">Humidity: 60%</div>
                         <div class="wind">Wind Speed: 6.2 km/h</div>
                     </div>
+                </div>
+                </div>
+                <div class="right">
+                    <img src="Images/City.png" width="620px" height="550px">
                 </div>
             </div>
 
