--- a/Index.html
+++ b/Index.html
@@ -76,10 +76,11 @@
 
     <div class="Banner" id="HomeID">
         <div class="Banner1">
-        <h2>Project ANI</h2>
-        <p>Agri Natin Ito : A Decision Support System for Benguet's Crop Prediction</p>
+            <h2>Project ANI</h2>
+            <p>Agri Natin Ito : A Decision Support System for Benguet's Crop Prediction</p>
         </div>
-        <img src="Images/Farmer.png"> 
+        <video src="Images/Forest.mp4" muted loop autoplay></video>
+        </div>
     </div>
 
     <div class="Contents">
